@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-06-30T16:08:36Z",
-  "count_outdated" : 92,
-  "uniques_outdated" : 50,
+  "timestamp" : "2023-07-09T00:48:51Z",
+  "count_outdated" : 93,
+  "uniques_outdated" : 51,
   "count" : 95,
   "uniques" : 53,
   "views" : [
-    {
-      "timestamp": "2023-06-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-28T00:00:00Z",
       "count": 1,
