@@ -1,3 +1,12 @@
+2023-07-09T00:48:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5497197800 # 976
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-09
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 50 92 / 53 95
+* notice: next accum: outdated-unq outdated-all / unq all: 51 93 / 53 95
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-06-24] / []
+
 2022-12-07T16:07:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640649943 # 682
 * notice: last 14d: unq all: 1 1
